--- a/templates/admin/pending.html.twig
+++ b/templates/admin/pending.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 
     <!-- ##### v DEBUT DES ELEMENTS PRINCIPAUX DE LA PAGE v ##### -->
-<div id="div--2hide-ifmodal">
+<div id="blk--2hide-ifmodal">
     <!-- Admin Controller banner -->
     {{ include('admin/_banner.html.twig') }}
 
