--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
             <div class="d-flex flex-row col-12 justify-content-between pt-1"><!--  class="container--nav bor3" -->
                 <!-- Logo & Marque -->
                 <div class="d-flex flex-column col-3 pl-0">
-                    <div id="nav--brand bor1">
+                    <div id="nav--brand">
                         <a href="{{ path('homepage_index') }}"><img class="nav--logo pt-2" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a>
                     </div>
                 </div>
