--- a/templates/socialreason/update.html.twig
+++ b/templates/socialreason/update.html.twig
@@ -7,7 +7,7 @@
 <!-- Admin Controller banner -->
 {{ include('admin/_banner.html.twig') }}
 
-<div class="paragraph--large" id="div--2hide-ifmodal">
+<div class="paragraph--large" id="blk--2hide-ifmodal">
 
     <form class="d-flex flex-column justify-content-center align-items-center" id="assoccreation" method="post">
 
