--- a/templates/tender/create.html.twig
+++ b/templates/tender/create.html.twig
@@ -10,7 +10,7 @@
 
 <!-- ***** EDITEUR DU DEVIS ***** -->
 <!-- **************************** -->
-<form class="paragraph--large div--2hide-ifmodal" id="form--tender" name="form--tender" method="post" novalidate>
+<form class="paragraph--large blk--2hide-ifmodal" id="form--tender" name="form--tender" method="post" novalidate>
 
     {% set customer=claim.customer %}
     <!-- Défini des variables de manipulation des données suite à retour dans le formulaire -->
